- [#MODX-860] Fixed z-index issues across manager

--- a/manager/templates/default/css/modext/index.css
+++ b/manager/templates/default/css/modext/index.css
@@ -6,6 +6,9 @@ textarea.x-form-field {
     font-weight: normal;
 }
 
+.ext-el-mask { z-index: 10; }
+.modx-lockmask { z-index: 11; }
+
 .x-menu a {
     text-decoration: none !important;
 }
